# daylit

./: .gitignore  CHANGELOG.md  Makefile  README.md  SECURITY.md  SITE.md  daylit.code-workspace  go.mod  go.sum
.github/: copilot-instructions.md
.github/workflows/: ci.yml  integration.yml  release.yml
cmd/daylit/: main.go
daylit-cli/: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  host=localhost password=secret dbname=daylit
daylit-cli/docs/: ARCHITECTURE.md  CLI.md  CONCEPTS.md  CONFIGURATION.md  DEVELOPMENT.md  POSTGRES_IMPLEMENTATION.md  POSTGRES_SETUP.md  QUICK_START.md  ROADMAP.md  SOFT_DELETE.md
daylit-cli/migrations/: 004_habits_and_ot.sql  embed.go
daylit-tray/: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  vite.config.ts
daylit-tray/src/: App.css  App.tsx  FontSizeManager.tsx  NotificationPage.css  NotificationPage.tsx  SettingsPage.css  SettingsPage.tsx  main.tsx
daylit-tray/src-tauri/: Cargo.toml  tauri.conf.json
daylit-tray/src-tauri/capabilities/: migrated.json  notification_dialog.json
daylit-tray/src-tauri/icons/: icon.icns
daylit-tray/src-tauri/src/: commands.rs  lib.rs  main.rs  scheduler.rs  server.rs  state.rs
docs/: CLI.md  CLI_REFERENCE.md  CONCEPTS.md  INSTALLATION.md  SOFT_DELETE.md  STORAGE.md
docs/user-guides/: ALERTS_AND_NOTIFICATIONS.md  DEBUGGING.md  POSTGRES_SETUP.md  QUICK_START.md  STORAGE.md  WINDOWS_WSL_SETUP.md
internal/backup/: backup.go  backup_test.go  integration_test.go
migrations/: 001_init.sql  002_soft_delete.sql  003_plan_revision.sql
(+212 files in other folders)
